--- a/_data/lecture_internet_och_moln.yml
+++ b/_data/lecture_internet_och_moln.yml
@@ -1,14 +1,225 @@
 ---
 contentTimeTotal:
-  literatureTime: 22
-  optionalLiteratureTime: 0
+  literatureTime: 149
+  optionalLiteratureTime: 346
 notInTopic:
   literature:
-  - title: "What is the Cloud? Soft and Fluffy Edition - Computer Stuff They Didn't Teach You #10"
-    url: https://www.youtube.com/watch?v=BO6jvQ88ICQ
+  - title: "The Internet: Crash Course Computer Science #29"
+    url: https://youtube.com/watch?v=AEaKrq3SpW8
     timeType: Video
-    timeMinutes: 22
+    timeMinutes: 12
     timeBadge: danger
     description: >
-      A gentle and clear explanation of cloud computing. This 20 min video talks about the components of a computer, starting with a Raspberry Pi, Laptops, Phones,...
+      Today, we're going to talk about how the Internet works. Specifically, how that stream of characters you punch into your browser's address bar, like "youtube.com", return this very website. Just to clarify we're talking in a broader sense about that massive network of networks connecting millions of computers together, not just the World Wide Web, which is a portion of the Internet, and our topic for next week. Today, we're going to focus on how data is passed back and forth - how a domain name is registered by the Domain Name System, and of course how the data requested or sent gets to the right person in little packets following standard Internet Protocol, or IP.  We'll also discuss two different approaches to transferring this data: Transmission Control Protocol, or TCP, when we need to be certain no information is lost, and User Datagram Protocol, or UDP, for those time sensitive applications - because nobody wants an email with missing text, but they also don't want to get lag-fragged in their favorite first person shooter.
 topics:
+  - topic: "Networking"
+    literatureTime: 0
+    optionalLiteratureTime: 0
+    description-include: networking.md
+  - topic: "Cloud"
+    literatureTime: 50
+    optionalLiteratureTime: 203
+    description-include: cloud.md
+    literature:
+    - title: "What is the Cloud? Soft and Fluffy Edition"
+      url: https://www.youtube.com/watch?v=BO6jvQ88ICQ
+      timeType: Video
+      timeMinutes: 22
+      timeBadge: danger
+      description: >
+        A gentle and clear explanation of cloud computing. This 20 min video talks about the components of a computer, starting with a Raspberry Pi, Laptops, Phones,...
+    - title: "​Is the cloud really just someone else's computer?"
+      url: https://techrepublic.com/article/is-the-cloud-really-just-someone-elses-computer
+      timeType: Article
+      timeMinutes: 5
+      timeBadge: info
+      description: >
+        A popular meme is that the cloud is just "someone else's computer." Jack Wallen explains why the cloud is so much more complex than the meme would have you believe.
+    - title: "Cloud Services Terminology Guide: Comparing AWS vs Azure vs Google"
+      url: https://cloudhealthtech.com/blog/cloud-comparison-guide-glossary-aws-azure-gcp
+      timeType: Article
+      timeMinutes: 13
+      timeBadge: info
+      description: >
+        To help you cross-identify comparable services between the leading cloud service providers, we’ve compiled the most common cloud services and features provided by Amazon Web Services (AWS), Microsoft Azure, and Google Cloud Platform (GCP), including compute, containers, storage, discounts, databases, security, and network services.
+    - title: "What is IaaS vs SaaS vs PaaS and XaaS: what’s the difference. Examples"
+      url: https://medium.com/@vanshvarshney_/what-is-iaas-vs-saas-vs-paas-and-xaas-whats-the-difference-examples-ceadeee146e6
+      timeType: Article
+      timeMinutes: 5
+      timeBadge: info
+      description: >
+        A taxi is a car as a service. You pay only when you take a taxi. You don’t need to buy a car, pay for fuel and garage or pump up tires…
+    - title: "What are the Business Benefits of Cloud Computing, IaaS, PaaS and SaaS?"
+      url: https://youtube.com/watch?v=whkyRvugqlM
+      timeType: Article
+      timeMinutes: 5
+      timeBadge: info
+      description: >
+        What is Cloud Computing? What is IaaS? What is SaaS? What is PaaS? 
+        Our video explains the technology behind Cloud Computing, Infrastructure as a Service (IaaS), Software as a Service (SaaS), Platform as a Service (PaaS), provides a comparison to traditional IT infrastructure as well as what the technology means for businesses, enterprises and government.
+    optionalLiterature:
+    - title: "Cloud computing - Wikipedia"
+      url: https://en.wikipedia.org/wiki/Cloud_computing
+      timeType: Wiki
+      timeMinutes: 0
+      timeBadge: dark
+    - title: "Stop saying the cloud is just someone else's computer - because it's not"
+      url: https://zdnet.com/article/stop-saying-the-cloud-is-just-someone-elses-computer-because-its-not
+      timeType: Article
+      timeMinutes: 8
+      timeBadge: info
+      description: >
+        Cloud and 'as a service' models have changed the way computing works. Get over it.
+    - title: "The Cloud and Cloud Architecture Explained"
+      url: https://www.youtube.com/watch?v=mJ_-VoEB6zM
+      timeType: Video
+      timeMinutes: 38
+      timeBadge: danger
+    - title: "Silicon Valley - John's Work Routine (Season 1-5)"
+      url: https://youtube.com/watch?v=rdYtuMnlu1I
+      timeType: Video
+      timeMinutes: 4
+      timeBadge: danger
+      description: >
+        Video contains scenes from S03E03, S03E09, S04E01, S05E08
+    - title: "Cloud computing - A simple introduction"
+      url: https://explainthatstuff.com/cloud-computing-introduction.html
+      timeType: Article
+      timeMinutes: 30
+      timeBadge: info
+      description: >
+        An introduction to cloud computing, different types, benefits and drawbacks.
+    - title: "Inside Azure datacenter architecture with Mark Russinovich"
+      url: https://youtube.com/watch?v=X-0V6bYfTpA
+      timeType: Video
+      timeMinutes: 77
+      timeBadge: danger
+      description: >
+        Join Mark Russinovich, Azure CTO, to learn how Microsoft Azure enables intelligent, modern, and innovative applications at scale in the cloud, on-premises, and on the edge. Microsoft Azure has achieved massive, global scale, with more than 50 announced regions consisting of over 100 datacenters, and it is growing fast. It delivers the promise of cloud computing, including high-availability, extreme performance, and security, by custom designing software and hardware to work best together. Mark takes you on a tour of Azure datacenter architecture and implementation innovations, describing everything from Azure global infrastructure, to how we enable large-scale enterprise scenarios on both cloud and edge, and more.
+    - title: "Different Types of Cloud Computing Service Models"
+      url: https://bluepiit.com/blog/different-types-of-cloud-computing-service-models
+      timeType: Article
+      timeMinutes: 6
+      timeBadge: info
+    - title: "Top cloud providers in 2021: AWS, Microsoft Azure, and Google Cloud, hybrid, SaaS players"
+      url: https://zdnet.com/article/the-top-cloud-providers-of-2021-aws-microsoft-azure-google-cloud-hybrid-saas
+      timeType: Article
+      timeMinutes: 40
+      timeBadge: info
+      description: >
+        Cloud computing in 2021 has become the de facto choice of IT due to digital transformation shifts accelerated by remote work and the COVID-19 pandemic. Here's a look the cloud leaders stack up, the hybrid market, and the key SaaS players.
+  - topic: "DNS"
+    literatureTime: 7
+    optionalLiteratureTime: 55
+    description-include: dns.md
+    literature:
+    - title: "What is a Domain Name? - Learn web development - MDN"
+      url: https://developer.mozilla.org/en-US/docs/Learn/Common_questions/What_is_a_domain_name
+      timeType: Article
+      timeMinutes: 7
+      timeBadge: info
+      description: >
+        Domain names are a key part of the Internet infrastructure. They provide a human-readable address for any web server available on the Internet.
+    optionalLiterature:
+    - title: "What is DNS? Introduction to Domain Name System"
+      url: https://youtube.com/watch?v=dl-C6cBoRg4
+      timeType: Video
+      timeMinutes: 32
+      timeBadge: danger
+      description: >
+        This video shows you practical examples of DNS in real time and includes Wireshark captures showing you actual DNS query and answer messages
+    - title: "An Introduction to DNS Terminology, Components, and Concepts"
+      url: https://digitalocean.com/community/tutorials/an-introduction-to-dns-terminology-components-and-concepts
+      timeType: Article
+      timeMinutes: 23
+      timeBadge: info
+      description: >
+        DNS, or the Domain Name System, is an integral part of how the internet functions today. However, the way that DNS works is often quite mysterious for new administrators. In this guide, we will discuss some of the common terminology and concepts that
+  - topic: "HTTP"
+    literatureTime: 35
+    optionalLiteratureTime: 84
+    description-include: http.md
+    literature:
+    - title: "HTTP Introduction - HttpWatch"
+      url: https://httpwatch.com/httpgallery/introduction
+      timeType: Article
+      timeMinutes: 3
+      timeBadge: info
+    - title: "The HTTPS-Only Standard - Introduction to HTTPS"
+      url: https://https.cio.gov/faq
+      timeType: Article
+      timeMinutes: 8
+      timeBadge: info
+      description: >
+        Resources, best practices, and case studies for deploying HTTPS in the federal government.
+    - title: "Introduction to HTTP/2 - Web Fundamentals"
+      url: https://developers.google.com/web/fundamentals/performance/http2
+      timeType: Article
+      timeMinutes: 24
+      timeBadge: info
+      description: >
+        HTTP/2 (or h2) is a binary protocol that brings push, multiplexing streams and frame control to the web.
+    optionalLiterature:
+    - title: "rfc7540"
+      url: https://datatracker.ietf.org/doc/html/rfc7540
+      timeType: Document
+      timeMinutes: 0
+      timeBadge: dark
+      description: >
+        Hypertext Transfer Protocol Version 2 (HTTP/2) (RFC )
+    - title: "HTTP: HTTP/2 - High Performance Browser Networking (O'Reilly)"
+      url: https://hpbn.co/http2
+      timeType: Article
+      timeMinutes: 39
+      timeBadge: info
+      description: >
+        What every web developer must know about mobile networks, protocols, and APIs provided by browser to deliver the best user experience.
+    - title: "rfc2616"
+      url: https://datatracker.ietf.org/doc/html/rfc2616
+      timeType: Document
+      timeMinutes: 0
+      timeBadge: dark
+      description: >
+        Hypertext Transfer Protocol -- HTTP/1.1 (RFC )
+    - title: "In Introduction to HTTP Basics"
+      url: https://personal.ntu.edu.sg/ehchua/programming/webprogramming/http_basics.html
+      timeType: Article
+      timeMinutes: 45
+      timeBadge: info
+  - topic: "Azure"
+    literatureTime: 39
+    optionalLiteratureTime: 4
+    description-include: azure.md
+    literature:
+    - title: "Five Azure services every developer should know"
+      url: https://channel9.msdn.com/Events/Connect/Microsoft-Connect--2018/T190
+      timeType: Video
+      timeMinutes: 39
+      timeBadge: danger
+      description: >
+        Get started with cloud development in Azure using five common services that benefit most applications running in the cloud.
+    optionalLiterature:
+    - title: "Get started with Azure Command-Line Interface (CLI)"
+      url: https://docs.microsoft.com/en-us/cli/azure/get-started-with-azure-cli?view=azure-cli-latest
+      timeType: Article
+      timeMinutes: 4
+      timeBadge: info
+      description: >
+        Learn how to start using the Azure CLI by completing common commands. You can begin using the Azure CLI by running it in an Azure Cloud shell environment.
+    - title: "Azure ops guide"
+      url: https://docsmsftpdfs.blob.core.windows.net/guides/azure/azure-ops-guide.pdf
+      timeType: Document
+      timeMinutes: 0
+      timeBadge: dark
+  - topic: "Säkerhet"
+    literatureTime: 6
+    optionalLiteratureTime: 0
+    description-include: saekerhet.md
+    literature:
+    - title: "What is Network Security? The Different Types of Protections"
+      url: https://checkpoint.com/cyber-hub/network-security/what-is-network-security
+      timeType: Article
+      timeMinutes: 6
+      timeBadge: info
+      description: >
+        Network Security protects your network using different types of technology and processes with a defined set of rules and configurations.
